# url-info-extractor-and-track-bitcoin

./: .env.example  .pre-commit-config.yaml  README.md  compose.yml  postman-collection.json  pyproject.toml
.github/workflows/: ci.yml
docker/local/django/: Dockerfile  entrypoint  start
docker/production/: Dockerfile
requirements/: base.txt
src/apps/accounts/: admin.py  forms.py  managers.py  models.py  repositories.py  services.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/api/: admin.py  models.py  repositories.py  services.py  types.py  validators.py
src/apps/api/migrations/: 0001_initial.py
src/apps/common/: exceptions.py  types.py
src/apps/common/repositories/: base_repository.py  django_base_repository.py
src/apps/crypto/: enum.py  services.py  types.py  urls.py  views.py
src/apps/crypto/tests/functional/: test_crypto_api_view.py
src/apps/urlinfo/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  validators.py  views.py
src/apps/urlinfo/migrations/: 0001_initial.py
src/apps/urlinfo/tests/: factories.py
src/apps/urlinfo/tests/functional/: test_urlinfo_api_view.py
src/config/: settings.py  urls.py
src/templates/: index.html
